docs: created updateOpeningHandler docs
